@@ -1,5 +1,6 @@
 package com.kea.Executor;
 
+import com.kea.Compiler.Builtins.KeaLibraries;
 import com.kea.Compiler.KeaBuiltinProvider;
 import com.kea.Compiler.KeaCompiler;
 import com.kea.Errors.KeaError;
@@ -14,12 +15,14 @@ import com.kea.Parser.AST.Node;
 import com.kea.Parser.Parser;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
 /*
 Экзекьютер
  */
+@SuppressWarnings({"resource", "DataFlowIssue"})
 public class KeaExecutor {
     private static Path localPath;
 
@@ -39,7 +42,7 @@ public class KeaExecutor {
             KeaBuiltinProvider.provide();
             // запускаем код
             KeaCompiler.vm.run(KeaCompiler.code);
-        } catch (KeaParsingError | KeaRuntimeError error) {
+        } catch (KeaParsingError | KeaRuntimeError | KeaResolveError error) {
             // если есть ошибка - выводим
             error.print();
             // error.printStackTrace();
@@ -50,16 +53,32 @@ public class KeaExecutor {
     public static void resolve(VmAddress address, String name) {
         // парсим
         Lexer lexer = null;
+        String fileName = "";
         try {
-            lexer = new Lexer("test.kea", new String(Files.readAllBytes(localPath.resolve(name))));
+            if (!KeaLibraries.libraries.containsKey(name)) {
+                fileName = name;
+                lexer = new Lexer(name, new String(Files.readAllBytes(localPath.resolve(name))));
+            } else {
+                try {
+                    fileName = KeaLibraries.libraries.get(name);
+                    InputStream stream = KeaExecutor.class.getResourceAsStream("/" + fileName);
+                    lexer = new Lexer(fileName, new String(stream.readAllBytes()));
+                } catch (NullPointerException e) {
+                    throw new KeaResolveError(
+                            address.getLine(),
+                            address.getFileName(),
+                            "Can't resolve name: " + name,
+                            "Check file exists!");
+                }
+            }
         } catch (IOException e) {
             throw new KeaResolveError(
                     address.getLine(),
                     address.getFileName(),
-                    "Can't resolve name" + localPath.resolve(name).toString(),
+                    "Can't resolve name: " + localPath.resolve(name).toString(),
                     "Check file exists!");
         }
-        Parser parser = new Parser(name, lexer.scan());
+        Parser parser = new Parser(fileName, lexer.scan());
         BlockNode result = parser.parse();
         // компилируем
         KeaCompiler.importDefinitions(result);
